project(tutorial1 ASM_MASM)

add_executable(t1_e1_addition example1_addition.asm)
add_executable(t1_e2_multiplication example2_multiplication.asm)
add_executable(t1_e3_division example3_division.asm)
add_executable(t1_e4_and example4_and.asm)
add_executable(t1_e5_xor example5_xor.asm)
add_executable(t1_e6_leftshift example6_leftshift.asm)
